# my-openenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
email_triage_env/: env.py  grader.py  models.py  task_registry.py
server/: app.py
tasks/: easy_triage.json  hard_triage.json  medium_triage.json
tests/: test_properties.py  test_unit.py
