[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compliant email triage environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"
